--- a/.github/workflows/main_bambam.yml
+++ b/.github/workflows/main_bambam.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy WAR app to Azure Web App - bambam
+name: Build and deploy JAR app to Azure Web App - bambam
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: 'java21'
+          java-version: '11'
           distribution: 'microsoft'
 
       - name: Build with Maven
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.war'
+          path: '${{ github.workspace }}/target/*.jar'
 
   deploy:
     runs-on: ubuntu-latest
@@ -39,7 +39,7 @@ jobs:
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
-
+  
     steps:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
@@ -49,9 +49,9 @@ jobs:
       - name: Login to Azure
         uses: azure/login@v2
         with:
-          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_39A087A4500E4FF5B956E6CBB1E563B3 }}
-          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_D9F72FF59F704776804E790098CEC1BB }}
-          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_38F221DAC1FF428F8754771731B95299 }}
+          client-id: ${{ secrets.AZUREAPPSERVICE_CLIENTID_5FF14BF4E4334B00B1FE30DD937C527B }}
+          tenant-id: ${{ secrets.AZUREAPPSERVICE_TENANTID_F998734AF8714D7AA0CF45E00CA222CE }}
+          subscription-id: ${{ secrets.AZUREAPPSERVICE_SUBSCRIPTIONID_ABDE11D7251D4C36B514F5641A5C09E4 }}
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
@@ -59,5 +59,5 @@ jobs:
         with:
           app-name: 'bambam'
           slot-name: 'Production'
-          package: '*.war'
+          package: '*.jar'
           
