--- a/.github/workflows/main_bambam.yml
+++ b/.github/workflows/main_bambam.yml
@@ -1,6 +1,3 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
-
 name: Build and deploy JAR app to Azure Web App - bambam
 
 on:
@@ -19,17 +16,20 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
-          distribution: 'microsoft'
+          java-version: '17'  # 필요한 경우 Java 버전을 조정하세요.
+          distribution: 'temurin'  # 또는 원하는 JDK 배포판을 선택하세요.
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Build with Gradle
+        run: ./gradlew clean build
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: build/libs/*.jar
 
   deploy:
     runs-on: ubuntu-latest
@@ -38,7 +38,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write #This is required for requesting the JWT
+      id-token: write  # 이 설정은 JWT 요청을 위한 필수 설정입니다.
   
     steps:
       - name: Download artifact from build job
@@ -60,4 +60,3 @@ jobs:
           app-name: 'bambam'
           slot-name: 'Production'
           package: '*.jar'
-          
