--- a/.github/workflows/main_bambam.yml
+++ b/.github/workflows/main_bambam.yml
@@ -16,14 +16,17 @@ jobs:
       - name: Set up Java version
         uses: actions/setup-java@v4
         with:
-          java-version: '17'  # 필요한 경우 Java 버전을 조정하세요.
-          distribution: 'temurin'  # 또는 원하는 JDK 배포판을 선택하세요.
+          java-version: '17'
+          distribution: 'temurin'
 
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Build with Gradle
         run: ./gradlew clean build
+
+      - name: List build directory
+        run: ls -al build/libs/  # 빌드된 파일 확인
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
@@ -38,7 +41,7 @@ jobs:
       name: 'Production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
-      id-token: write  # 이 설정은 JWT 요청을 위한 필수 설정입니다.
+      id-token: write
   
     steps:
       - name: Download artifact from build job
@@ -59,4 +62,4 @@ jobs:
         with:
           app-name: 'bambam'
           slot-name: 'Production'
-          package: 'build/libs/*.jar'  # 특정 JAR 파일을 지정하도록 경로 수정
+          package: 'build/libs/*.jar'
