--- a/.github/workflows/main_bambam.yml
+++ b/.github/workflows/main_bambam.yml
@@ -62,4 +62,4 @@ jobs:
         with:
           app-name: 'bambam'
           slot-name: 'Production'
-          package: 'build/libs/*.jar'
+          package: 'build/libs/bambam_backend-0.0.1-SNAPSHOT.jar'
