--- a/.github/workflows/main_bambam.yml
+++ b/.github/workflows/main_bambam.yml
@@ -77,4 +77,4 @@ jobs:
         with:
           app-name: 'bambam'
           slot-name: 'Production'
-          package: '${{ github.workspace }}/build/libs/bambam_backend-0.0.1-SNAPSHOT.jar'  # 절대 경로 사용
+          package: './bambam_backend-0.0.1-SNAPSHOT.jar'  # 절대 경로 사용
