--- a/.github/workflows/azure-webapps-java-jar.yml
+++ b/.github/workflows/azure-webapps-java-jar.yml
@@ -1,22 +1,3 @@
-# This workflow will build and push a Java application to an Azure Web App when a commit is pushed to your default branch.
-#
-# This workflow assumes you have already created the target Azure App Service web app.
-# For instructions see https://docs.microsoft.com/en-us/azure/app-service/quickstart-java?tabs=javase&pivots=platform-linux
-#
-# To configure this workflow:
-#
-# 1. Download the Publish Profile for your Azure Web App. You can download this file from the Overview page of your Web App in the Azure Portal.
-#    For more information: https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#generate-deployment-credentials
-#
-# 2. Create a secret in your repository named AZURE_WEBAPP_PUBLISH_PROFILE, paste the publish profile contents as the value of the secret.
-#    For instructions on obtaining the publish profile see: https://docs.microsoft.com/azure/app-service/deploy-github-actions#configure-the-github-secret
-#
-# 3. Change the value for the AZURE_WEBAPP_NAME. Optionally, change the JAVA_VERSION environment variable below.
-#
-# For more information on GitHub Actions for Azure: https://github.com/Azure/Actions
-# For more information on the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# For more samples to get started with GitHub Action workflows to deploy to Azure: https://github.com/Azure/actions-workflow-samples
-
 name: Build and deploy JAR app to Azure Web App
 
 env:
@@ -44,16 +25,28 @@ jobs:
         with:
           java-version: ${{ env.JAVA_VERSION }}
           distribution: ${{ env.DISTRIBUTION }}
-          cache: 'maven'
+          cache: gradle
 
-      - name: Build with Maven
-        run: mvn clean install
+      - name: Grant execute permission for Gradlew
+        run: chmod +x gradlew
+
+      - name: Show current directory
+        run: pwd  # 현재 작업 디렉토리를 출력
+
+      - name: List all files in the workspace before build
+        run: ls -alR  # 빌드 전 모든 디렉토리 및 파일을 재귀적으로 나열
+
+      - name: Build with Gradle
+        run: ./gradlew clean build --console=plain  # 자세한 로그 출력을 위해 --console=plain 사용
+
+      - name: List build directory
+        run: ls -al build/libs/  # 빌드된 파일을 확인
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v3
         with:
           name: java-app
-          path: '${{ github.workspace }}/target/*.jar'
+          path: 'build/libs/*.jar'
 
   deploy:
     permissions:
@@ -69,6 +62,15 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: java-app
+
+      - name: Show current directory after download
+        run: pwd  # 다운로드 후 작업 디렉토리를 출력
+
+      - name: List all files in the workspace after download
+        run: ls -alR  # 다운로드 후 모든 디렉토리 및 파일을 재귀적으로 나열
+
+      - name: List build directory after download
+        run: ls -al ${{ github.workspace }}/build/libs/  # 다운로드 후 빌드 디렉토리 파일 확인
 
       - name: Deploy to Azure Web App
         id: deploy-to-webapp
